[package]
name = "node-package-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.18"
indexmap = { version = "1.8.1", features = ["serde"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
