[package]
name = "node-package-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
color-eyre = "0.6.1"
indexmap = { version = "1.8.1", features = ["serde"] }
reqwest = { version = "0.11.10", features = ["blocking", "rustls-tls", "json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tracing = "0.1.34"
tracing-forest = { version = "0.1.4", features = ["env-filter"] }
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tracing-tree = "0.2.0"
