[package]
name = "node-package-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
clap = { version = "3.1.18", features = ["derive"] }
color-eyre = "0.6.1"
flate2 = "1.0.23"
indexmap = { version = "1.8.1", features = ["serde", "std"] }
node-semver = "2.0.0"
reqwest = { version = "0.11.10", features = ["rustls-tls", "json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tar = "0.4.38"
tokio = { version = "1.18.2", features = ["full"] }
tracing = "0.1.34"
tracing-forest = { version = "0.1.4", features = ["env-filter"] }
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tracing-tree = "0.2.0"
